work-mgmt/src/main/resources/static/css/omny-1.0.0.css
/* ... */
a.glyphicon,
a.glyphicon:visited,
h2 a.glyphicon,
h2 a.glyphicon:visited {
  color: #939598;
  text-decoration: none;
}
.input-group-addon .glyphicon {
  font-size: 16px;
  border: none;
  padding: 0px;
  margin: 0px;
  border-radius: 0px !important;
}
.clickable:focus,
.clickable:hover,
a.glyphicon:focus,
a.glyphicon:hover,
h2 a.glyphicon:focus,
h2 a.glyphicon:hover {
  color: #ff6c06;
  /*color: #646669;*/
}
.sort-asc,
.sort-desc {
  border: none;
  font-size: .7em;	
}
.sort-asc::after {
  content: '\e253';
}
.sort-desc::after {
  content: '\e252';
}

.help-block {
  clear: both;
  font-size: 0.65em;
  font-style: italic;
  line-height: 1em;
  margin-bottom: 0.1em;
  margin-top: -0.8em;
  padding-left: 5px;
}
.modal .help-block {
  margin-top: -0.1em;
}
.help-block-lg {
  line-height: 1.2em;
  font-size: 0.8em;
}
.navbar-brand { 
	padding: 0;
  position: relative;
  top: -18px;  
}
.navbar-brand img,
.brand-logo {
  max-height: 80px;
  max-width: 160px;
}
.navbar-top {
	 background-color:white;
	 z-index:200;
	 position:relative;
	 margin-top: 0;
   padding-top: 20px;
}
.container-sticky {
	padding-left:0;
  padding-right: 30px;
  position: fixed;
  top: 0;
  z-index: 100;
}
.navbar-sticky {
  background-color: white;
  margin-top:0;
  padding-left: 0;
  left: auto;
  right: auto;
}
.navbar-sticky h2 { 
  margin-top:0;
}
.navbar-sticky h2 span.profile-img {
  font-size: 16px;
}

.search {
	border-radius:15px;
	width:100px;
	display:inline;
	position:relative;
	bottom:5px;	
}
/* END BOOTSTRAP OVERRIDES */

/* ACTIVE TABLE */

.active-table input:disabled {
  box-shadow: none;
  border: none;
  background-color: inherit;
}
.active-table td.actions {
  min-width: 106px;
}
.active-table td.editing {
	padding:1px;
}
.active-table td.editing>input {
  padding: 3px;
  margin: 0;
}
.editing[contenteditable='true']:focus {
  border-color: #66afe9;
  outline: 0;
  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
  box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
}
.editing[contenteditable='true'] {
    border: 1px solid #ccc;
    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
    -webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
    -o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
    transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
}
.editing.glyphicon {
  border-style: inset;
  background-color: rgba(0,82,132,.5);
}

/* END ACTIVE TABLE */

/* OMNY BAR */

.omny-bar {
  background-color: #eee;
  color: #ff6c06;
  position: fixed;
}
.omny-bar-left {
  border-bottom-style: none;
  border-right-style: double;
  border-top-style: none;
  bottom: 0;
  display:none;
  left: 0px;
  top: 0;  
  width: 50px;
}
.omny-bar-left .page {
	position: relative;
	top: 20px;
}
.omny-bar-left .powered-by-icon img {
  position: fixed;
  bottom: 10px;
  width: 40px;
}
.omny-bar li.admin-bar span {
  /*color: red;*/
}
.omny-bar li {
  list-style: none;
  margin-left: -36px;
}
.omny-bar li span.glyphicon:hover,
.omny-bar li span.glyphicon:active,
.omny-bar li span.glyphicon.active {
  color: #fcf8e3;
  background-color: #ff6c06;
}
.omny-bar li span:not(.active) {
  border: 0px;
}
.omny-bar-left li span:not(.active):not(:active):not(:hover) {
  border-bottom: solid 1px #ff6c06;
  border-bottom-right-radius: 0;
  border-bottom-left-radius: 0;
}
.omny-bar li:last-child span {
  border-bottom: 0;
}

.omny-bar-top {
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
  border-bottom-style: double;
  border-right-style: double;
  border-left-style: double;
  left: 20%;
  top: 0%;
  width: 750px;
  padding-left: 20px;
  right: 20%;
}

.omny-bar-top ul>li {
  float: left;
  position: relative;
  display: block;
}
.omny-bar-top ul>li>a {
	border-radius: 4px;
  position: relative;
  display: block;
  padding: 5px 7px;
}
.omny-bar-top ul>li+li {
  margin-left: 2px;
}
.omny-bar-top .glyphicon {
	padding: 10px
}

.omny-burger {
  /*border-bottom-style: double;
  border-right-style: double;*/
	left: 0px;
	position: fixed;
	top: 0px;
}

/* END OMNY BAR */

/* SUPPORT BAR */
.support-bar {
	background-color: #ff6c06;
  border-bottom-left-radius: 1em;
	border-top-left-radius: 1em;
  height: 3.5em;
	position: fixed;
  right: 0;
  top: 49%;
	width: 3.5em;
}
.support-bar .glyphicon {
  border:none;
  color: #59C4ED; /* pale blue */ /* b7b7b7 grey*/
  font-size: 2.5em;
  padding-top: .1em;
}
/* END SUPPORT BAR */

.clickable:active,
.clickable:focus,
.clickable:hover {
	cursor: pointer;
}
.currentBody { 
	margin-top: 10px;
}
a.dropdown {
	margin-left: -5px;
}
.omny-filter.dropdown-menu li:nth-child(1) {
  margin-top: 10px;
}
.omny-dropdown.dropdown-menu li {
	height: 25px;
	padding-left: 10px;
  text-transform: none;
}
.omny-dropdown.dropdown-menu li.selected::after {
  content: "\e013";
  font-family: 'Glyphicons Halflings';
  float: right;
  margin-right: 10px;
}
.omny-dropdown.dropdown-menu li.divider {
  background-color: #ff6c06;
	height: 1px;
  margin: 0 10px 10px 10px;
}
#customActionBtn {
	top: 1px;
}
#customActionMenu.omny-dropdown {
	left: -100px;
}
.create-form {
  height: 2.2em;
}
.edit-form {
	/*height: 1.8em;*/
}
#filterMenu.omny-dropdown {
  width: 200px;
}
.form {
	display: block;
	list-style: none;
  /*padding-top: 20px;
  margin-bottom: -30px;*/
}
.form,
#loginForm,
#messages {
  line-height: 2.5em;
}
/* TAG IT overrides */

/* omny styling */
ul.tagit {
	margin-bottom: 10px;
}

/* tagit.ui-zendesk.css: Optional scoped theme for tag-it which mimics the zendesk widget. */
ul.tagit {
  border-style: solid;
  border-width: 1px;
  border-color: #C6C6C6;
  background: inherit;
}
ul.tagit li.tagit-choice {
  -moz-border-radius: 6px;
  border-radius: 6px;
  -webkit-border-radius: 6px;
  border: 1px solid #CAD8F3;

  background: none;
  background-color: #d9edf7;

  font-weight: normal;
}
/* ... */

